--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="data.js"></script>
     <script src="app.js"></script>
   </head>
-  <body>
+  <body style="display:inline-flex; ">
     <button onclick="app(data)">Start Searching</button>
    
   </body>
