--- a/index.html
+++ b/index.html
@@ -5,9 +5,114 @@
     <title>devCodeCamp &middot; Most Wanted</title>
     <script src="data.js"></script>
     <script src="app.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="styles.css" media="screen"/>
   </head>
-  <body style="display:inline-flex; ">
-    <button onclick="app(data)">Start Searching</button>
-   
+  <body style="display:inline-flex; background-color: gray; width: 100%; height: 100vh">
+    
+    <innerbody class="mainbody">
+      <myheader class="blue">
+        <button onclick="app(data)">Start Searching</button>
+
+      </myheader>
+      <mainbody>
+        <tophalf style= "display: flex; flex-direction: row-reverse;">
+          <picturebox class="col-sm-5 picturebox maximum">
+            <div class="container">
+              <img id="picture" class="maximum" src=""/>
+            </div>
+          </picturebox>
+
+
+
+          <entrybox id="entrybox" class="col-sm-7 descriptionbox maximum show">
+            <p></p>
+            <p></p>
+            <label for="fID">ID:</label><input type="text" id="FID" name="ID: ">
+            <p></p>
+            <label for="fname">First Name:</label><input type="text" id="fname" name="First Name: ">
+            <p></p>
+            <label for="flastname">Last Name: </label><input type="text" id="flastname" name="Last Name: ">
+            <p></p>
+            <label for="fgender">Gender:</label><input type="text" id="fgender" name="Gender: ">
+            <p></p>
+            <label for="fdob">DOB:</label><input type="text" id="fdob" name="DOB: ">
+            <p></p>
+            <label for="fheight">Height:</label><input type="text" id="fheight" name="Height: ">
+            <p></p>
+            <label for="fweight">Weight:</label><input type="text" id="fweight" name="Weight: ">
+            <p></p>
+            <label for="feyecolor">Eye Color:</label><input type="text" id="feyecolor" name="Eye Color: ">
+            <p></p>
+            <label for="foccupation">Occupation:</label><input type="text" id="foccupation" name="Occupation: ">
+            <p></p>
+            <label for="fparentid">Parent ID:</label><input type="text" id="fparentid" name="Parent ID: ">
+            <p></p>
+            <label for="fcurrentspouse">Spouse ID:</label><input type="text" id="fcurrentspouse" name="Current Spouse: ">
+            <p></p>
+          </entrybox>
+
+
+
+
+          <descriptionbox id="descriptionbox" class="col-sm-7 descriptionbox maximum noshow">
+            <p></p>
+            <p></p>
+            <div id="identifier" class="maximum">
+              ID:
+            </div>
+            <p></p>
+            <div id="firstname">
+              First Name:
+            </div>
+            <p></p>
+            <div id="lastname">
+              Last Name:
+            </div>
+            <p></p>
+            <div id="gender">
+              Gender:
+            </div>
+            <p></p>
+            <div id="dob">
+              DOB:
+            </div>
+            <p></p>
+            <div id="height">
+              Height:
+            </div>
+            <p></p>
+            <div id="weight">
+              Weight:
+            </div>
+            <p></p>
+            <div id="eyecolor">
+              Eye Color:
+            </div>
+            <p></p>
+            <div id="occupation">
+              Occupation:
+            </div>
+            <p></p>
+            <div id="parentid">
+              Parent IDs:
+            </div>
+            <p></p>
+            <div id="currentspouse">
+              Current Spouse:
+            </div>
+            <p></p>
+          </descriptionbox>
+        </tophalf>
+        <bottomhalf class="col-sm-12 bottomhalf maximum">
+          <div >
+            Brown speaks fluent French and has a master's degree in International Business. He is an avid golfer, snowboarder, skier, and dirt biker. Brown enjoys being the center of attention and has been known to frequent nightclubs where he enjoys showing off his high-priced vehicles, boats, and other toys. Brown was a member of The Church of Jesus Christ of Latter-Day Saints, and completed his Mormon mission near Paris, France.
+          </div>
+          <div>
+            Jason Derek Brown is wanted for murder and armed robbery in Phoenix, Arizona. During November of 2004, Brown allegedly shot and killed an armored car guard outside a movie theater and then fled with the money.
+          </div>
+        </bottomhalf>
+      </mainbody>
+    </innerbody>
   </body>
 </html>
