--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
 
           <entrybox id="entrybox" class="col-sm-7 descriptionbox maximum show">
             <p></p>
+            <button onclick="infoBoxSearch(data)">Start Search By Entered Fields</button>
             <p></p>
-            <label for="fID">ID:</label><input type="text" id="FID" name="ID: ">
+            <label for="fID">ID:</label><input type="text" id="fID" name="ID: ">
             <p></p>
             <label for="fname">First Name:</label><input type="text" id="fname" name="First Name: ">
             <p></p>
-            <label for="flastname">Last Name: </label><input type="text" id="flastname" name="Last Name: ">
+            <label for="flastname">Last Name:</label><input type="text" id="flastname" name="Last Name: ">
             <p></p>
             <label for="fgender">Gender:</label><input type="text" id="fgender" name="Gender: ">
             <p></p>
